tests/specs/run/cts/cjs_import_cts/check.out
Check [WILDCARD]main.js
TS7006 [ERROR]: Parameter 'a' implicitly has an 'any' type.
module.exports.add = function (a, b) {
                               ^
    at file:///[WILDLINE]

TS7006 [ERROR]: Parameter 'b' implicitly has an 'any' type.
module.exports.add = function (a, b) {
                                  ^
    at file:///[WILDLINE]

Found 2 errors.

error: Type checking failed.
